...
                                                      .displaySmall
                                                      .fontStyle,
                                            ),
                                      ),
                                    ),
                                    Row(
                                      key: ValueKey('Row_tvaj'),
                                      mainAxisSize: MainAxisSize.max,
                                      mainAxisAlignment:
                                          MainAxisAlignment.center,
                                      children: [
                                        Expanded(
                                          child: Padding(
...
                                      child: Row(
                                        mainAxisSize: MainAxisSize.max,
                                        mainAxisAlignment:
                                            MainAxisAlignment.spaceAround,
                                        children: [
                                          FFButtonWidget(
                                            key: ValueKey('Button_8etp'),
                                            onPressed: () async {
                                              logFirebaseEvent(
                                                  'EDIT_ALLERGENS_PAGE_ADD_BTN_ON_TAP');
                                              logFirebaseEvent(
                                                  'Button_backend_call');

...
                                                      'You have no allergens at the moment',
                                                ),
                                              );
                                            }

                                            return Wrap(
                                              key: ValueKey('Wrap_qjxz'),
                                              spacing: 8.0,
                                              runSpacing: 8.0,
                                              alignment: WrapAlignment.start,
                                              crossAxisAlignment:
                                                  WrapCrossAlignment.start,
                                              direction: Axis.horizontal,
...
