...
                      ),
                    ),
                    Padding(
                      padding:
                          EdgeInsetsDirectional.fromSTEB(0.0, 4.0, 0.0, 0.0),
                      child: TextFormField(
                        key: ValueKey('fullName_na4h'),
                        controller: _model.fullNameTextController,
                        focusNode: _model.fullNameFocusNode,
                        onChanged: (_) => EasyDebounce.debounce(
                          '_model.fullNameTextController',
                          Duration(milliseconds: 2000),
                          () async {
...
                    Align(
                      alignment: AlignmentDirectional(0.0, 0.0),
                      child: Padding(
                        padding:
                            EdgeInsetsDirectional.fromSTEB(0.0, 12.0, 0.0, 0.0),
                        child: FFButtonWidget(
                          key: ValueKey('Button_zkcr'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'EDIT_PROFILE_SET_NEW_USERNAME_BTN_ON_TAP');
                            logFirebaseEvent('Button_backend_call');

                            await currentUserReference!
...
