...
                                      .fontStyle,
                                ),
                          ),
                        ),
                        AuthUserStreamWidget(
                          builder: (context) => Text(
                            key: ValueKey('displayNameText_3ipn'),
                            currentUserDisplayName,
                            style: FlutterFlowTheme.of(context)
                                .displaySmall
                                .override(
                                  font: GoogleFonts.inter(
                                    fontWeight: FlutterFlowTheme.of(context)
...
                                          logFirebaseEvent('Row_navigate_to');

                                          context.pushNamed(
                                              EditProfileWidget.routeName);
                                        },
                                        child: Row(
                                          key: ValueKey('Row_bzgk'),
                                          mainAxisSize: MainAxisSize.max,
                                          children: [
                                            Container(
                                              width: 40.0,
                                              height: 40.0,
                                              decoration: BoxDecoration(
...
